--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-navigation": "^4.3.6",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.3.10",
-    "react-navigation-tabs": "^2.8.10"
+    "react-navigation-tabs": "^2.8.10",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
